--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 class="header-title header-title--categoryView inactive">Acción</h1>
 
     <form id="searchForm" class="header-searchForm">
-      <input type="text" placeholder="Vengadores" />
+      <input type="text" placeholder="Buscar" />
       <button id="searchBtn">🔍</button>
     </form>
   </header>
@@ -123,7 +123,7 @@
     </article>
   </section>
 
-  <footer>Hecho por nicolasgoitia10@gmail.com</footer>
+  <footer id="footer">Hecho por nicolasgoitia10@gmail.com</footer>
   
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./src/apiKey.js"></script>
