--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 <body>
   <header id="header" class="header-container">
     <span class="header-arrow inactive">&lt;</span>
-    <h1 class="header-title">Info Movies</h1>
+    <div class="header-title-lenguage">
+      <h1 class="header-title">Info Movies</h1>
+      <select name="language" id="languageSelector" class="languageSelector">
+      <option value="es-ES">Español</option>         
+      <option value="en-US">English</option>
+      <option value="pt-BR">Portuguese Br</option>
+      <option value="fr-FR">French</option>
+    </select>
+    </div>
     <h1 class="header-title header-title--categoryView inactive">Acción</h1>
 
     <form id="searchForm" class="header-searchForm">
